--- a/react-1/src/Dialogs/Dialogs.module.css
+++ b/react-1/src/Dialogs/Dialogs.module.css
@@ -11,12 +11,21 @@
 .dialogsItems .active {
         color: gold;
 }
+.addMessageEll {
+    display: grid;
+}
+.addMessageWind {
+    display: grid;
+    grid-template-columns: 100px;
+    grid-template-rows: 50px 50px;
+}
+
+
 .messages {
     display: grid;
-    grid-template-columns: 400px;
+    grid-template-columns: 800px;
     grid-template-rows: 33px 33px 33px 33px 33px;
     grid-row-gap: 12px;
-
 }
 .messages .message  {
     display: grid;
@@ -31,6 +40,11 @@
     position: relative;
     border-radius: 14px;
 }
+
+/*.m0 {
+      background: transparent;
+}*/
+
 
 .avatarPic {
     display: grid;
