--- a/react-1/src/Components/NavBar/NavBar.module.css
+++ b/react-1/src/Components/NavBar/NavBar.module.css
@@ -7,6 +7,7 @@
   grid-template-rows: 30px 30px 30px 30px 64px 28px;
   grid-template-columns: 250px;
   display: grid;
+  height: 381px;
 }
 
 .item {
