61th_lesson: cookie, login в теории, auth/me

--- a/react-1/src/Components/Header/Header.module.css
+++ b/react-1/src/Components/Header/Header.module.css
@@ -7,3 +7,12 @@
 .header img {
 width: 20px;
 }
+.loginBlock {
+    float: right;
+    color: white;
+    text-decoration: none;
+}
+.loginBlock a {
+    color: white;
+    text-decoration: none;
+}
