78th_lesson: login и logout api(75-redux-form введение (login)76-redux-form опять про базовые вещи77-redux-form field validation (валидация, ошибки). Осторожно Замыкание!

--- a/react-1/src/Dialogs/Dialogs.module.css
+++ b/react-1/src/Dialogs/Dialogs.module.css
@@ -68,3 +68,9 @@
     align-items: center;
     justify-items: center;
 }
+.sendMessage {
+    margin-top: 25px;
+}
+.addMessagePlace {
+    width: 200px;
+}
