--- a/react-1/src/Components/common/FormsControls/FormsControl.module.css
+++ b/react-1/src/Components/common/FormsControls/FormsControl.module.css
@@ -5,3 +5,8 @@
 .formControl.error span{
     color: red;
 }
+.formSummaryError {
+    border: red 1px solid;
+    padding: 5px;
+    color: orange;
+}
